# adc25-workshop

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  cpm.cmake
plugin/: CMakeLists.txt
plugin/include/flanger/: Flanger.h
py/: main.py
py/flanger/: flanger.py
scripts/: update_task_branches.sh
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  DelayLineTests.cpp  FlangerEnd2EndTests.cpp
